Added a grade test task for executing JUnit test cases.